--- a/Languages/English/Keyed/TTS_English.xml
+++ b/Languages/English/Keyed/TTS_English.xml
@@ -7,6 +7,11 @@
     <RimTalk.Settings.TTS.Title>Text-to-Speech Settings</RimTalk.Settings.TTS.Title>
     <RimTalk.Settings.TTS.Enable>Enable TTS</RimTalk.Settings.TTS.Enable>
     <RimTalk.Settings.TTS.EnableTooltip>Automatically converts dialogue to speech when displayed.</RimTalk.Settings.TTS.EnableTooltip>
+    <RimTalk.Settings.TTS.ButtonEnable>Enable on-off button</RimTalk.Settings.TTS.ButtonEnable>
+    <RimTalk.Settings.TTS.ButtonEnableTooltip>Enable an on-off button in in-game UI, its setting won't save</RimTalk.Settings.TTS.ButtonEnableTooltip>
+    <RimTalk.TTS.OnOffUpdated>Text to Speech Module {0}</RimTalk.TTS.OnOffUpdated>
+    <RimTalk.TTS.On>turned on</RimTalk.TTS.On>
+    <RimTalk.TTS.Off>turned off</RimTalk.TTS.Off>
     <RimTalk.Settings.TTS.ApiKey>Fish Audio API Key:</RimTalk.Settings.TTS.ApiKey>
     <RimTalk.Settings.TTS.ModelLabel>TTS Model: {0}</RimTalk.Settings.TTS.ModelLabel>
     <RimTalk.Settings.TTS.ModelHighQuality>fishaudio-1 (v1.6)</RimTalk.Settings.TTS.ModelHighQuality>
