--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ Urgent:
     Support more online TTS service supplier
     {
         I don't know which to support, and I need professional comment
+        AzureTTS, edgeTTS
     }
     Support local TTS model
     {
@@ -14,14 +15,26 @@ Improvement:
         {
             status: half-complete, can run. Source is not following the pawn. At least no runtime error.
         }
+        total code refactor
+        {
+            desc: Code structure is in a mess now.
+            status: Unecessary reflections are deleted
+            need: further refraction and logic sorting
+        }
+        Reset button
+        {
+            desc: Add a button in Rimtalk Overlay window's setting button. When presses, all audio will be discarded.
+            status: Almost there
+            need: When clicked, it must react correctly
+        }
     planned:
         cooldown time after TTS generation
         {
             desc: Add a cooldown time independent of Rimtalk's cooldown time, set when all content of a complete dialogue is generated with its audio all played or skipped, during which, according to user's settings, Rimtalk cannot generate more dialogues, or Rimtalk will still generate dialogues, however, restricted by Rimtalk's cooldown time, and the same time, TTS will not function until TTS module's cooldown time is over.
         }
-        total code refactor
+        API request interval
         {
-            desc: Code structure is a PoS now.
+            desc: Add a cooltime for API request to avoid request potentially being denied.
         }
 
 Bug fix:
