--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@ Urgent:
     Support more online TTS service supplier
     {
         I don't know which to support, and I need professional comment
-        AzureTTS, edgeTTS
+        Queued: AzureTTS, edgeTTS
     }
     Support local TTS model
     {
@@ -11,21 +11,15 @@ Urgent:
 
 Improvement:
     In Progress:
-        Voice source location follow pawn
+        Voice source location follows speaking pawn
         {
             status: half-complete, can run. Source is not following the pawn. At least no runtime error.
         }
         total code refactor
         {
             desc: Code structure is in a mess now.
-            status: Unecessary reflections are deleted
-            need: further refraction and logic sorting
-        }
-        Reset button
-        {
-            desc: Add a button in Rimtalk Overlay window's setting button. When presses, all audio will be discarded.
-            status: Almost there
-            need: When clicked, it must react correctly
+            status: Unnecessary reflections are deleted. Class function are unclear now.
+            need: further refraction and logic sorting.
         }
     planned:
         cooldown time after TTS generation
