--- a/TODO
+++ b/TODO
@@ -1,29 +1,33 @@
 Urgent:
     Support more online TTS service supplier
     {
-        Queued: AzureTTS, edgeTTS, Siliconflow
+        status: Framework is finished
+        Queued: Siliconflow(finish soon), AzureTTS(in queue), edgeTTS(in queue)
     }
     Support local TTS model
     {
         I don't have any experience and the format could be a mess
+        waiting for help
     }
 
 Improvement:
     In Progress:
-        Voice source location follows speaking pawn
-        {
-            status: half-complete, can run. Source is not following the pawn. At least no runtime error.
-        }
         total code refactor
         {
             desc: Code structure is in a mess now.
             status: Unnecessary reflections are deleted. Class function are unclear now.
             need: further refraction and logic sorting.
         }
-    planned:
+    Planned:
         cooldown time after TTS generation
         {
             desc: Add a cooldown time independent of Rimtalk's cooldown time, set when all content of a complete dialogue is generated with its audio all played or skipped, during which, according to user's settings, Rimtalk cannot generate more dialogues, or Rimtalk will still generate dialogues, however, restricted by Rimtalk's cooldown time, and the same time, TTS will not function until TTS module's cooldown time is over.
         }
+    Suspended:
+        Voice source location follows speaking pawn
+        {
+            status: half-complete, can run. Source is not following the pawn. At least no runtime error.
+        }
 
 Bug fix:
+    working fine :)
