TODO & small fix

--- a/TODO
+++ b/TODO
@@ -1,10 +1,5 @@
 Urgent:
-    Support more online TTS service supplier
-    {
-        status: Siliconflow(CozyVoice & IndexTTS) is supported
-        Queued: AzureTTS(in queue), edgeTTS(in queue)
-    }
-    Support local TTS model
+    Support local TTS model:
     {
         I don't have any experience and the format could be a mess
         waiting for help
@@ -12,22 +7,32 @@ Urgent:
 
 Improvement:
     In Progress:
-        total code refactor
-        {
-            desc: Code structure is in a mess now.
-            status: Unnecessary reflections are deleted. Class function are unclear now.
-            need: further refraction and logic sorting.
-        }
+        Code refactor,
+        Player Character Voice Customization
     Planned:
-        cooldown time after TTS generation
+        cooldown time after TTS generation:
         {
             desc: Add a cooldown time independent of Rimtalk's cooldown time, set when all content of a complete dialogue is generated with its audio all played or skipped, during which, according to user's settings, Rimtalk cannot generate more dialogues, or Rimtalk will still generate dialogues, however, restricted by Rimtalk's cooldown time, and the same time, TTS will not function until TTS module's cooldown time is over.
-        }
-    Suspended:
-        Voice source location follows speaking pawn
+        },
+        Support more online TTS service supplier:
         {
-            status: half-complete, can run. Source is not following the pawn. At least no runtime error.
+            status: Siliconflow(CozyVoice & IndexTTS) is supported
+            Queued: AzureTTS(in queue), edgeTTS(in queue)
+        },
+        Voice source location follows speaking pawn:
+        {
+            status: not started yet
+        },
+        Status indicator:
+        {
+            desc: A color bar below the Rimtalk window displaying status now.
+                Red: Voice of the next response is still not generated nor cancelled.
+                Yellow: Voice of the next response is generated or cancelled, but voices of some of generated responses are still not generated nor cancelled.
+                Green: All voices are generated or cancelled, and there are some responses are still not displayed nor ignored.
+                Gray: All responses are displayed or ignored.
         }
+
+
 
 Bug fix:
     # working fine :)
